# etl_duckdb

./: mermaid_component.py  pipeline_00.py  pyproject.toml
