[tool.poetry]
name = "etl-duckdb-poetry-pkg"
version = "0.1.0"
description = ""
authors = ["sgoncalves"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
gdown = "^5.2.0"
streamlit = "^1.38.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
